base/lifestyle-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lifestyle-api
spec:
  selector:
    app: lifestyle-api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
