base/lifestyle-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifestyle-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/router.middlewares: default-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: raspberrypi.tail580209.ts.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lifestyle-api
                port:
                  number: 3000
